# minipkg2

./: .gitignore  Makefile  README.md  README.org  TODO.md  TODO.org  meson.build  meson_options.txt
include/: bashconfig.hpp  buf.h  cmdline.h  cmdline.hpp  config.h  git.h  git.hpp  miniconf.h  miniconf.hpp  minipkg2.h  minipkg2.hpp  package.h  package.hpp  print.h  print.hpp  quickdb.hpp  utils.h  utils.hpp
src/: bashconfig.cpp  cmdline.c  cmdline.cpp  download.c  download.cpp  git.c  git.cpp  main.c  main.cpp  miniconf.c  miniconf.cpp  minipkg2.c  minipkg2.cpp  op_build.c  op_check.c  op_clean.c  op_clean.cpp  op_config.c  op_config.cpp  op_download.c  op_download.cpp  op_help.c  op_help.cpp  op_info.c  op_info.cpp  op_install.c  op_install.cpp  op_list.c  op_list.cpp  op_purge.c  op_purge.cpp  op_remove.cpp  op_remove_purge.c  op_repo.c  op_repo.cpp  op_show.cpp  package.c  package.cpp  print.c  quickdb.cpp  (+2 more)
util/: build.bash  env.bash  minipkg2.conf  parse.bash  set_version.sh
